# moveit2_python

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/python_interface/lib/python_interface/: test_script.py
install/python_interface/share/ament_index/resource_index/package_run_dependencies/: python_interface
install/python_interface/share/ament_index/resource_index/parent_prefix_path/: python_interface
install/python_interface/share/python_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/python_interface/share/python_interface/cmake/: python_interfaceConfig-version.cmake  python_interfaceConfig.cmake
install/python_interface/share/python_interface/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/moveit2_commander/: package.xml  setup.cfg  setup.py
src/moveit2_commander/launch/: demo.launch.py
src/moveit2_commander/moveit2_commander/: plan.py
src/moveit_commander/: package.xml  setup.cfg  setup.py
src/moveit_commander/python_interface/: common_objects.h  wrap_python_robot_interface.cpp
src/moveit_commander/python_interface/tf2_ros/: async_buffer_interface.h  buffer.h
src/python_interface/: CMakeLists.txt  package.xml
src/python_interface/include/python_interface/: test.h
src/python_interface/src/python/: CMakeLists.txt  conversions.h  core.cpp  ros_init.cpp  task.cpp  test_script.py
src/python_interface/src/python/moveit_commander/: planning_scene_interface.py  robot.py
